# DjangoProject

./: .env.sample  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: check_db.py  create_manager_group.py  give_manager_perms.py
mailing/migrations/: 0001_initial.py  0002_alter_broadcast_message_alter_broadcast_recipient_and_more.py  0003_alter_broadcast_last_send_and_more.py  0004_alter_broadcast_message_and_more.py  0005_broadcast_owner_message_owner_recipient_owner.py  0006_alter_recipient_comment.py  0007_alter_broadcast_options_alter_message_options_and_more.py  0008_alter_broadcast_options.py
mailing/templates/: 403.html
mailing/templates/attempt/: attempt_delete.html  attempt_detail.html  attempt_list.html  base.html
mailing/templates/broadcasts/: base.html  broadcast_delete.html  broadcast_detail.html  broadcast_form.html  broadcast_list.html
mailing/templates/main_page/: main_page.html
mailing/templates/messages/: base.html  message_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/recipients/: base.html  recipient_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
static/css/: styles.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_country_user_phone_number_and_more.py  0003_alter_user_country.py  0004_alter_user_options.py
users/templates/users/: base.html  detail.html  login.html  (+3 more)
