[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
asttokens = "3.0.0"
colorama = "0.4.6"
decorator = "5.2.1"
django = "5.2.1"
django-countries = "7.6.1"
django-phonenumber-field = "8.1.0"
dotenv = "0.9.9"
executing = "2.2.0"
ipython = "9.3.0"
ipython-pygments-lexers = "1.1.1"
isort = "6.0.1"
jedi = "0.19.2"
matplotlib-inline = "0.1.7"
parso = "0.8.4"
phonenumbers = "9.0.10"
pillow = "11.2.1"
prompt-toolkit = "3.0.51"
psycopg2 = "2.9.10"
pure-eval = "0.2.3"
pygments = "2.19.1"
python-decouple = "3.8"
python-dotenv = "1.1.0"
redis = "6.3.0"
sqlparse = "0.5.3"
stack-data = "0.6.3"
traitlets = "5.14.3"
typing-extensions = "4.14.1"
tzdata = "2025.2"
wcwidth = "0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
